Refactored resources Application
