# src/routes/publicRoutes.ts
@@ -4,6 +4,7 @@ import { searchMessages } from '../controllers/public/search';
 import { getRecentMessage } from '../controllers/public/recentMsg';
 import { readMessage } from '../controllers/public/readMsg';
 import { getChurchEvents } from '../controllers/public/churchEvents';
+import { getUpcomingEvents } from '../controllers/public/upcomingEvents';
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.get('/search', searchMessages);
 router.get('/recent', getRecentMessage);
 router.get('/resource/:id', readMessage);
 router.get('/events', getChurchEvents);
+router.get('/upcoming-events', getUpcomingEvents);
 
 export default router;
